--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,13 +4,11 @@
 # Made by Gura1
 #
 database:
-  type:
+  enabled: false
+  type: MYSQL
   mysql:
-    host:
-    port:
-    database-name:
-    username:
-    password:
-  mongo:
-    uri:
-    database:
+    host: localhost
+    port: 3306
+    database-name: playtime
+    username: 1234
+    password: 1234
