--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ version = '1.0'
 repositories {
     mavenCentral()
     maven {
-        name = "spigotmc-repo"
-        url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/"
+        name = "papermc"
+        url = uri("https://repo.papermc.io/repository/maven-public/")
     }
     maven {
         name = "sonatype"
@@ -22,7 +22,7 @@ repositories {
 }
 
 dependencies {
-    compileOnly("org.spigotmc:spigot-api:1.21.6-R0.1-SNAPSHOT")
+    compileOnly("io.papermc.paper:paper-api:1.21.6-R0.1-SNAPSHOT")
     compileOnly 'me.clip:placeholderapi:2.11.6'
     compileOnly 'com.zaxxer:HikariCP:4.0.3'
 }
@@ -38,6 +38,7 @@ tasks {
 
 def targetJavaVersion = 21
 java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
